Make ModuleArgs expand manifest classpath JARs for exports and opens
Before this PR: We only read the JARs on the classpath. This was
fine if we didn't use manifest classpath JARs.

After this PR: We now read the JARs in the manifest classpath JAR
and then include those in our search for opens and exports.