@@ -1225,6 +1225,46 @@ class JavaServiceDistributionPluginTests extends GradleIntegrationSpec {
         actualOpts.get(compilerPairIndex - 1) == "--add-opens"
     }
 
+    def 'applies opens based on classpath manifests for manifest classpaths'() {
+        Manifest manifest = new Manifest()
+        manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0")
+        manifest.getMainAttributes().putValue('Add-Opens', 'jdk.compiler/com.sun.tools.javac.file')
+        File testJar = new File(getProjectDir(),"test.jar");
+        testJar.withOutputStream { fos ->
+            new JarOutputStream(fos, manifest).close()
+        }
+        createUntarBuildFile(buildFile)
+        buildFile << """
+            dependencies {
+                implementation files("test.jar")
+                javaAgent "net.bytebuddy:byte-buddy-agent:1.10.21"
+            }
+            tasks.jar.archiveBaseName = "internal"
+            distribution {
+                javaVersion 17
+                enableManifestClasspath true
+            }""".stripIndent()
+        file('src/main/java/test/Test.java') << "package test;\npublic class Test {}"
+
+        when:
+        runTasks(':build', ':distTar', ':untar')
+
+        then:
+        def actualOpts = OBJECT_MAPPER.readValue(
+                file('dist/service-name-0.0.1/service/bin/launcher-static.yml'),
+                LaunchConfigTask.LaunchConfig)
+                .jvmOpts()
+
+        // Quick check
+        actualOpts.containsAll([
+                "--add-opens",
+                "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED"])
+
+        // Verify args are set in the correct order
+        int compilerPairIndex = actualOpts.indexOf("jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
+        actualOpts.get(compilerPairIndex - 1) == "--add-opens"
+    }
+
     def 'Handles jars with no manifest'() {
         File testJar = new File(getProjectDir(),"test.jar");
         testJar.withOutputStream { fos ->
